# Battle-Code

./: AbstractHero.cpp  AbstractHero.h  AbstractItem.cpp  AbstractItem.h  AgileHero.cpp  AgileHero.h  ArmorItem.cpp  ArmorItem.h  CMakeLists.txt  EquippedHero.cpp  EquippedHero.h  PowerfulHero.cpp  PowerfulHero.h  README.md  ShieldItem.cpp  ShieldItem.h  SwordItem.cpp  SwordItem.h  main.cpp
